fix overflow issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -49,6 +49,10 @@
     @apply outline-none;
   }
 
+  body {
+    overflow-x: hidden;
+  }
+
   h1 {
     @apply text-2xl;
   }
